@@ -1,5 +1,12 @@
 2007-11-05  David Gilbert  <david.gilbert@object-refinery.com>
 
+	Patch 1823724 by Richard West:
+	* source/org/jfree/chart/renderer/xy/XYDifferenceRenderer.java
+	(drawItemPass1): Add code to draw item labels.
+
+2007-11-05  David Gilbert  <david.gilbert@object-refinery.com>
+
+	Patch 1823697 by Richard West:
 	* source/org/jfree/chart/plot/XYPlot.java
 	(removeDomainMarker(Marker)): New method,
 	(removeDomainMarker(Marker, Layer)): Likewise,
@@ -10,6 +17,7 @@
 	
 2007-11-05  David Gilbert  <david.gilbert@object-refinery.com>
 
+	Patch 1823697 by Richard West:
 	* source/org/jfree/chart/plot/CategoryPlot.java
 	(removeDomainMarker(Marker)): New method,
 	(removeDomainMarker(Marker, Layer)): Likewise,
